test/ill-formed/multi-file/per_module_illformed/helper.py
def f():
    pass
def f():
    pass
x = 1
